# cpp-advanced-hse

./: README.md  run-clang-format.py  run_linter.sh  submit.py
cmake/: FindGlog.cmake  SeminarUtils.cmake
deadlines/: hse.yml  test.yml
docs/: devserver.md  multithreading.md  setup.md  troubleshooting.md  windows.md
infra/: build.docker  testenv.docker
lectures/2021/01-intro/: lecture.md
lectures/2022/01-memory/: lecture.md
lectures/2023/01-memory/: lecture.md
seminars/: CMakeLists.txt
seminars/2022/05-errors/: plan.md
seminars/2023/: CMakeLists.txt
seminars/2023/03-smart-ptrs/: README.md
seminars/2023/05-errors/: run.sh
seminars/2023/06-patterns/: run.sh
seminars/2024/: CMakeLists.txt
seminars/2024/01-memory/: 07-placement-new.cpp
tasks/baby-threads/hash-table/: .tester.json
tasks/bonus/bad-hash/: readme.md
tasks/bonus/bad-rand/: readme.md
tasks/bonus/clang-fun/: CMakeLists.txt  readme.md
tasks/bonus/executors/: test_executors.cpp
tasks/bonus/functional-world/: CMakeLists.txt
tasks/condvars/semaphore/: test.cpp
tasks/intro/gcd/: readme.md
tasks/intro/multiplication/: readme.md
tasks/jpeg-decoder/: CMakeLists.txt
tasks/jpeg-decoder/baseline/tests/: fuzz_jpeg.cpp
tasks/jpeg-decoder/fftw/tests/: fuzz_fft.cpp
tasks/jpeg-decoder/huffman/include/: huffman.h
tasks/jpeg-decoder/huffman/tests/: fuzz_huffman.cpp
tasks/jpeg-decoder/utils/: image.h
tasks/lock-free/futex/: CMakeLists.txt  mutex.cpp  mutex.h
tasks/lock-free/rw-spinlock/: readme.md
tasks/memory/: CMakeCache.txt
tasks/memory/dedup/: CMakeLists.txt  dedup.h  test.cpp
tasks/memory/deque/: .tester.json  CMakeLists.txt  deque.h  test.cpp
tasks/memory/intrusive-list/: CMakeLists.txt  intrusive_list.h  test.cpp
tasks/memory/lru-cache/: CMakeLists.txt  lru_cache.cpp  lru_cache.h  test.cpp
tasks/memory/string-view/: CMakeLists.txt  string_view.h  test.cpp
tasks/meta/compile-eval/: CMakeLists.txt
tasks/move/compressed-pair/: .tester.json  CMakeLists.txt  compressed_pair.h
tasks/move/cow-vector/: .tester.json  CMakeLists.txt  cow_vector.cpp  cow_vector.h  cow_vector_test.cpp
tasks/move/harakiri/: CMakeLists.txt  harakiri.cpp  harakiri.h
tasks/move/reallol/: readme.md
tasks/move/rule-of-5/: readme.md
tasks/move/string-operations/: .tester.json
tasks/patterns/any/: CMakeLists.txt  test.cpp
tasks/patterns/scala-vector/: test.cpp
tasks/scheme/advanced/tests/: test_lambda.cpp
tasks/scheme/basic/tests/: test_list.cpp
tasks/scheme/parser/: object.h
tasks/scheme/tidy/tests/: test_fuzzing_2.cpp  test_lambda.cpp
tasks/smart-ptrs/: CMakeLists.txt
tasks/smart-ptrs/intrusive/: .tester.json
tasks/smart-ptrs/shared/: .tester.json
tasks/smart-ptrs/shared-from-this/: .tester.json  test_shared.cpp
tasks/smart-ptrs/unique/: .tester.json  test.cpp
tasks/smart-ptrs/weak/: .tester.json
tasks/types/functors/: readme.md
tasks/types/itertools/: test.cpp
