build_seminar_examples(01-memory)
build_seminar_examples(02-move)
build_seminar_examples(03-smart-ptrs)
build_seminar_examples(05-errors)
add_subdirectory(06-patterns/pimpl)
build_seminar_examples(06-patterns)
build_seminar_examples(09-hello-threading)
build_seminar_examples(10-condition-variables)
build_seminar_examples(12-advanced-threads)
